@@ -3,3 +3,4 @@
 <p><a class="interwiki" title="Main Page" href="http://en.wikipedia.org/wiki/Main_Page">Main Page</a></p>
 <p><a class="interwiki" title="Main Page" href="http://en.wikipedia.org/wiki/Main_Page">Main Page</a></p>
 <p><a href="/wiki/en/Special:Edit?topic=Wikipedia" class="edit" title="Wikipedia">Wikipedia</a></p>
+<p><a class="interwiki" title="jamwiki" href="http://jamwiki.org/wiki/en/">jamwiki</a></p>
